externals/bcplusparser/src/bcplus/parser/detail/Scanner.2.cpp
/* Generated by re2c 0.13.5 on Thu Dec 17 18:02:06 2015 */
#line 1 "bcplus/parser/detail/Scanner.2.re2c"

#include <sstream>

#include <boost/filesystem.hpp>
#include <boost/filesystem/fstream.hpp>

#include "bcplus/parser/detail/Scanner.h"
#include "bcplus/parser/detail/lemon_parser.h"

#include "bcplus/Location.h"
#include "bcplus/parser/Token.h"

#include "bcplus/parser/detail/ScannerSource.h"
#include "bcplus/parser/detail/ScannerRawSource.h"
#include "bcplus/parser/detail/ScannerTokenSource.h"
#include "bcplus/parser/detail/ScannerFileSource.h"
#include "bcplus/parser/detail/ScannerBufferSource.h"

namespace u = babb::utils; 
namespace fs = boost::filesystem;

namespace bcplus {
namespace parser {
namespace detail {

Token* Scanner::tokenize_2(ScannerRawSource* source) {
	if (source->eof()) return new Token(T_EOF, new ReferencedString("<EOF>"), source->loc(), source->loc());
	else if (!source->good()) return new Token(T_ERR_IO, new ReferencedString("<IO ERROR>"), source->loc(), source->loc());


	int ret;
	Location begin;

	begin = source->loc();
	source->token() = source->cursor();



	if (_cond == yycNORMAL) {
			
#line 44 "<stdout>"
{
	char yych;
	goto yyc_NORMAL;
/* *********************************** */
yyc_NORMAL:
	{
		static const unsigned char yybm[] = {
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0, 128,   0, 128, 128,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			128,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};

		if ((source->limit() - source->cursor()) < 21) source->fill(21);
		yych = *source->cursor();
		if (yych <= 'k') {
			if (yych <= 'c') {
				if (yych <= '`') {
					if (yych != '\n') goto yy2_3;
				} else {
					if (yych <= 'a') goto yy2_5;
					if (yych <= 'b') goto yy2_6;
					goto yy2_7;
				}
			} else {
				if (yych <= 'f') {
					if (yych <= 'd') goto yy2_8;
					if (yych <= 'e') goto yy2_9;
					goto yy2_10;
				} else {
					if (yych <= 'g') goto yy2_3;
					if (yych <= 'h') goto yy2_11;
					if (yych <= 'i') goto yy2_12;
					goto yy2_3;
				}
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'n') {
					if (yych <= 'l') goto yy2_13;
					if (yych <= 'm') goto yy2_14;
					goto yy2_15;
				} else {
					if (yych <= 'o') goto yy2_16;
					if (yych <= 'p') goto yy2_17;
					goto yy2_18;
				}
			} else {
				if (yych <= 't') {
					if (yych <= 'r') goto yy2_19;
					if (yych <= 's') goto yy2_20;
					goto yy2_21;
				} else {
					if (yych <= 'u') goto yy2_22;
					if (yych <= 'v') goto yy2_23;
					if (yych <= 'w') goto yy2_24;
					goto yy2_3;
				}
			}
		}
yy2_2:
		source->cursor() = source->marker();
		goto yy2_4;
yy2_3:
		++source->cursor();
yy2_4:
#line 123 "bcplus/parser/detail/Scanner.2.re2c"
		{ goto re2c_notkw; }
#line 141 "<stdout>"
yy2_5:
		yych = *(source->marker() = ++source->cursor());
		switch (yych) {
		case 'b':	goto yy2_418;
		case 'c':	goto yy2_424;
		case 'd':	goto yy2_423;
		case 'f':	goto yy2_422;
		case 'l':	goto yy2_420;
		case 's':	goto yy2_421;
		case 't':	goto yy2_419;
		default:	goto yy2_4;
		}
yy2_6:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'y') goto yy2_415;
		goto yy2_4;
yy2_7:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_389;
		if (yych == 'o') goto yy2_388;
		goto yy2_4;
yy2_8:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'e') goto yy2_370;
		goto yy2_4;
yy2_9:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'q') goto yy2_327;
		if (yych == 'x') goto yy2_328;
		goto yy2_4;
yy2_10:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_321;
		goto yy2_4;
yy2_11:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'i') goto yy2_316;
		goto yy2_4;
yy2_12:
		yych = *(source->marker() = ++source->cursor());
		if (yych <= 'l') {
			if (yych == 'f') goto yy2_265;
			goto yy2_4;
		} else {
			if (yych <= 'm') goto yy2_264;
			if (yych <= 'n') goto yy2_263;
			goto yy2_4;
		}
yy2_13:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_257;
		goto yy2_4;
yy2_14:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_212;
		if (yych == 'o') goto yy2_211;
		goto yy2_4;
yy2_15:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'e') goto yy2_173;
		if (yych == 'o') goto yy2_172;
		goto yy2_4;
yy2_16:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'b') goto yy2_154;
		if (yych == 'f') goto yy2_153;
		goto yy2_4;
yy2_17:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'o') goto yy2_136;
		goto yy2_4;
yy2_18:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'u') goto yy2_130;
		goto yy2_4;
yy2_19:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'i') goto yy2_124;
		goto yy2_4;
yy2_20:
		yych = *(source->marker() = ++source->cursor());
		switch (yych) {
		case 'd':	goto yy2_55;
		case 'h':	goto yy2_57;
		case 'i':	goto yy2_54;
		case 'o':	goto yy2_56;
		case 't':	goto yy2_53;
		default:	goto yy2_4;
		}
yy2_21:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'r') goto yy2_48;
		goto yy2_4;
yy2_22:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'n') goto yy2_41;
		goto yy2_4;
yy2_23:
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'a') goto yy2_31;
		goto yy2_4;
yy2_24:
		yych = *(source->marker() = ++source->cursor());
		if (yych != 'h') goto yy2_4;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_29;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_29;
		if (yych <= 'z') goto yy2_2;
yy2_29:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 112 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_WHERE;						goto re2c_finish;					}
#line 263 "<stdout>"
yy2_31:
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'a') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'b') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_39;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_39;
		if (yych <= 'z') goto yy2_2;
yy2_39:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 65 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_VARIABLES;					goto re2c_finish;					}
#line 290 "<stdout>"
yy2_41:
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_46;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_46;
		if (yych <= 'z') goto yy2_2;
yy2_46:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 111 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_UNLESS;						goto re2c_finish;					}
#line 311 "<stdout>"
yy2_48:
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_51;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_51;
		if (yych <= 'z') goto yy2_2;
yy2_51:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 119 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_TRUE;							goto re2c_finish;					}
#line 328 "<stdout>"
yy2_53:
		yych = *++source->cursor();
		if (yych == 'r') goto yy2_87;
		goto yy2_2;
yy2_54:
		yych = *++source->cursor();
		if (yych == 'm') goto yy2_75;
		goto yy2_2;
yy2_55:
		yych = *++source->cursor();
		if (yych == 'F') goto yy2_67;
		goto yy2_2;
yy2_56:
		yych = *++source->cursor();
		if (yych == 'r') goto yy2_62;
		goto yy2_2;
yy2_57:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'w') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_60;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_60;
		if (yych <= 'z') goto yy2_2;
yy2_60:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 62 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SHOW;							goto re2c_finish;					}
#line 361 "<stdout>"
yy2_62:
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_65;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_65;
		if (yych <= 'z') goto yy2_2;
yy2_65:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 64 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SORTS;						goto re2c_finish;					}
#line 378 "<stdout>"
yy2_67:
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_73;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_73;
		if (yych <= 'z') goto yy2_2;
yy2_73:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 105 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SDFLUENT;						goto re2c_finish;					}
#line 401 "<stdout>"
yy2_75:
		yych = *++source->cursor();
		if (yych != 'p') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'F') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_85;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_85;
		if (yych <= 'z') goto yy2_2;
yy2_85:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 106 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_SIMPLEFLUENT;					goto re2c_finish;					}
#line 432 "<stdout>"
yy2_87:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'g') goto yy2_2;
		yych = *++source->cursor();
		if (yych == '_') goto yy2_93;
		if (yych == 'n') goto yy2_2;
		goto yy2_92;
yy2_91:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 14) source->fill(14);
		yych = *source->cursor();
yy2_92:
		if (yybm[0+yych] & 128) {
			goto yy2_91;
		}
		if (yych == 'n') goto yy2_109;
		goto yy2_2;
yy2_93:
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_107;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_107;
		if (yych <= 'z') goto yy2_2;
yy2_107:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 108 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_STRONG_NOCONCURRENCY;			goto re2c_finish;					}
#line 492 "<stdout>"
yy2_109:
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'o') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'n') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_122;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_122;
		if (yych <= 'z') goto yy2_2;
yy2_122:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 107 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_STRONG_NOCONCURRENCY;			goto re2c_finish;					}
#line 529 "<stdout>"
yy2_124:
		yych = *++source->cursor();
		if (yych != 'g') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'd') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_128;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_128;
		if (yych <= 'z') goto yy2_2;
yy2_128:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 104 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_RIGID;						goto re2c_finish;					}
#line 548 "<stdout>"
yy2_130:
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_134;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_134;
		if (yych <= 'z') goto yy2_2;
yy2_134:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 61 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_QUERY;						goto re2c_finish;					}
#line 567 "<stdout>"
yy2_136:
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'i') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'b') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'l') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'y') goto yy2_2;
		yych = *++source->cursor();
		if (yych == 'c') goto yy2_2;
		goto yy2_144;
yy2_143:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 7) source->fill(7);
		yych = *source->cursor();
yy2_144:
		if (yych <= '\f') {
			if (yych == '\t') goto yy2_143;
			if (yych <= '\n') goto yy2_2;
			goto yy2_143;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yy2_2;
				goto yy2_143;
			} else {
				if (yych != 'c') goto yy2_2;
			}
		}
		yych = *++source->cursor();
		if (yych != 'a') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'u') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'd') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_151;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_151;
		if (yych <= 'z') goto yy2_2;
yy2_151:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 103 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_POSSIBLY_CAUSED;				goto re2c_finish;					}
#line 622 "<stdout>"
yy2_153:
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_170;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_170;
		if (yych <= 'z') goto yy2_2;
		goto yy2_170;
yy2_154:
		yych = *++source->cursor();
		if (yych == 'j') goto yy2_155;
		if (yych == 's') goto yy2_156;
		goto yy2_2;
yy2_155:
		yych = *++source->cursor();
		if (yych == 'e') goto yy2_164;
		goto yy2_2;
yy2_156:
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'r') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'v') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'e') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 'd') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_162;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_162;
		if (yych <= 'z') goto yy2_2;
yy2_162:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 102 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_OBSERVED;						goto re2c_finish;					}
#line 662 "<stdout>"
yy2_164:
		yych = *++source->cursor();
		if (yych != 'c') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 't') goto yy2_2;
		yych = *++source->cursor();
		if (yych != 's') goto yy2_2;
		source->ctxmarker() = source->cursor() + 1;
		yych = *++source->cursor();
		if (yych <= '@') goto yy2_168;
		if (yych <= 'Z') goto yy2_2;
		if (yych <= '`') goto yy2_168;
		if (yych <= 'z') goto yy2_2;
yy2_168:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 60 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_OBJECTS;						goto re2c_finish;					}
#line 681 "<stdout>"
yy2_170:
		++source->cursor();
		source->cursor() = source->ctxmarker();
#line 101 "bcplus/parser/detail/Scanner.2.re2c"
		{ ret = T_OF;							goto re2c_finish;					}
#line 687 "<stdout>"
yy2_172:
		yych = *++source->cursor();
		if (yych <= 'm') {
			if (yych == 'c') goto yy2_182;
			goto yy2_2;
		} else {
			if (yych <= 'n') goto yy2_183;
			if (yych == 't') goto yy2_184;
			goto yy2_2;
		}
yy2_173:
		yych = *++source->cursor();
		if (yych == 'q') goto yy2_175;
		if (yych != 'v') goto yy2_2;
